accountkit issue resolved and desire box spacing issue

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -5016,7 +5016,7 @@
 
     .page .form .content .select_desires {
       width: 100%;
-      height: 70px;
+      /* height: 70px; */
       border: 1px solid #E3E3E3;
       padding: 10px;
       border-radius: 1px;
@@ -5038,9 +5038,10 @@
     }
 
     .page .form .content .select_desires span.label {
-      position: absolute;
+      /* position: absolute;
       top: 14px;
-      left: 15px;
+      left: 15px; */
+      margin-left: 5px;
       font-family: 'Roboto Condensed';
       font-size: 13px;
       line-height: 17px;
@@ -5048,8 +5049,8 @@
       font-weight: 400;
       z-index: 100;
       -webkit-font-smoothing: antialiased;
-      padding: 0;
-      margin: 0;
+      /* padding: 0;
+      margin: 0; */
       /* z-index: 99999; */
     }
 
@@ -5071,7 +5072,7 @@
       border-radius: 2px;
       padding:  0 5px;
       margin-right: 5px;
-      margin-top: 27px;
+      margin-top: 10px;
       width:auto !important;
     }
 
